@@ -1,3 +1,9 @@
+2004-09-23  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* lib/gdk_pixbuf2.rb: Improved log handling.
+	Added Gdk::Pixbuf::LOG_DOMAIN.
+	Rename GLib::Log.set_error_domain to GLib::Log.set_log_domain.	
+
 2004-08-29  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* lib/gdk_pixbuf2.rb: Added Gdk::PixbufLoader.open.
